fix issue #200590, scrollbar appears when english title is too long on notification page

--- a/hotShareMobile/client/bell/bell.less
+++ b/hotShareMobile/client/bell/bell.less
@@ -3,7 +3,7 @@
 .bell .content .icon{position: absolute;top: 10px;left: 10px;border: none;border-radius:50%;}
 .bell .content .button{position: absolute;top: 10px;right: 10px;border: 2px;}
 .bell .content .noIcon{position: absolute;top: 10px;left: 10px;border: none;border-radius:50%;box-shadow: 0 0 12px #fff, 0 0 2px #fff}
-.bell .content .alarm{padding-left: 50px;padding-right: 10px; color: #bbb}
+.bell .content .alarm{padding-left: 50px;padding-right: 10px; color: #bbb; overflow-x: hidden; text-overflow: ellipsis;}
 .bell .content .createAt{padding-left: 50px; color: gray;}
 .bell .line{text-align:center;width: 100%; height: 1px; padding: 5px 0px;}
 .bell .line span{background: #333; width: 100%; height: 1px; display: block;}
